--- a/exercicio-021/fundo-006.html
+++ b/exercicio-021/fundo-006.html
@@ -6,12 +6,19 @@
     <title> </title>
     <style>
         body{
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
             background-image: url( 'imagens/wallpaper002.jpg');
             background-position: center center;
             background-size: cover ;
             background-repeat: no-repeat;
+            background-attachment: fixed;*/
+
+            /*shorthead-background
+            color > image > position > repeat > [size] > attachent
+            */
+           background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+           background-size:cover;
         }
         main{
             background-color: white;
@@ -21,12 +28,14 @@
             border: 1px solid black;
             border-radius: 15px;
         }
+
+        
     </style>
 </head>
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa dolor nisi nostrum porro quasi dolorem, ad ea, obcaecati et animi illo aliquam distinctio delectus maxime, minima ullam laboriosam minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Est iusto ipsa voluptates delectus, debitis maxime sint aspernatur et, eaque natus reprehenderit unde facilis assumenda, cumque consequuntur eveniet doloribus sit repudiandae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci fuga, quis voluptate qui, optio repellat, expedita libero ullam commodi eaque reprehenderit eligendi debitis? Pariatur illum magni laboriosam consequuntur, fuga officia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. A odit rerum doloremque magnam dolorum sint quod. Atque harum quia asperiores nobis doloremque nulla reprehenderit, laudantium omnis accusantium iure? Cumque, dolore.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa dolor nisi nostrum porro quasi dolorem, ad ea, obcaecati et animi illo aliquam distinctio delectus maxime, minima ullam laboriosam minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Est iusto ipsa voluptates delectus, debitis maxime sint aspernatur et, eaque natus reprehenderit unde facilis assumenda, cumque consequuntur eveniet doloribus sit repudiandae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci fuga, quis voluptate qui, optio repellat, expedita libero ullam commodi eaque reprehenderit eligendi debitis? Pariatur illum magni laboriosam consequuntur, fuga officia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. A odit rerum doloremque magnam dolorum sint quod. Atque harum quia asperiores nobis doloremque nulla reprehenderit, laudantium omnis accusantium iure? Cumque, dolore.</p><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa dolor nisi nostrum porro quasi dolorem, ad ea, obcaecati et animi illo aliquam distinctio delectus maxime, minima ullam laboriosam minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Est iusto ipsa voluptates delectus, debitis maxime sint aspernatur et, eaque natus reprehenderit unde facilis assumenda, cumque consequuntur eveniet doloribus sit repudiandae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci fuga, quis voluptate qui, optio repellat, expedita libero ullam commodi eaque reprehenderit eligendi debitis? Pariatur illum magni laboriosam consequuntur, fuga officia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. A odit rerum doloremque magnam dolorum sint quod. Atque harum quia asperiores nobis doloremque nulla reprehenderit, laudantium omnis accusantium iure? Cumque, dolore.</p><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa dolor nisi nostrum porro quasi dolorem, ad ea, obcaecati et animi illo aliquam distinctio delectus maxime, minima ullam laboriosam minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Est iusto ipsa voluptates delectus, debitis maxime sint aspernatur et, eaque natus reprehenderit unde facilis assumenda, cumque consequuntur eveniet doloribus sit repudiandae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci fuga, quis voluptate qui, optio repellat, expedita libero ullam commodi eaque reprehenderit eligendi debitis? Pariatur illum magni laboriosam consequuntur, fuga officia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. A odit rerum doloremque magnam dolorum sint quod. Atque harum quia asperiores nobis doloremque nulla reprehenderit, laudantium omnis accusantium iure? Cumque, dolore.</p><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa dolor nisi nostrum porro quasi dolorem, ad ea, obcaecati et animi illo aliquam distinctio delectus maxime, minima ullam laboriosam minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Est iusto ipsa voluptates delectus, debitis maxime sint aspernatur et, eaque natus reprehenderit unde facilis assumenda, cumque consequuntur eveniet doloribus sit repudiandae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci fuga, quis voluptate qui, optio repellat, expedita libero ullam commodi eaque reprehenderit eligendi debitis? Pariatur illum magni laboriosam consequuntur, fuga officia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. A odit rerum doloremque magnam dolorum sint quod. Atque harum quia asperiores nobis doloremque nulla reprehenderit, laudantium omnis accusantium iure? Cumque, dolore.</p><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis culpa dolor nisi nostrum porro quasi dolorem, ad ea, obcaecati et animi illo aliquam distinctio delectus maxime, minima ullam laboriosam minus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Est iusto ipsa voluptates delectus, debitis maxime sint aspernatur et, eaque natus reprehenderit unde facilis assumenda, cumque consequuntur eveniet doloribus sit repudiandae? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci fuga, quis voluptate qui, optio repellat, expedita libero ullam commodi eaque reprehenderit eligendi debitis? Pariatur illum magni laboriosam consequuntur, fuga officia! Lorem ipsum dolor, sit amet consectetur adipisicing elit. A odit rerum doloremque magnam dolorum sint quod. Atque harum quia asperiores nobis doloremque nulla reprehenderit, laudantium omnis accusantium iure? Cumque, dolore.</p>
     </main>
 </body>
 </html>
