--- a/curso de html/projeto-youtube/index.html
+++ b/curso de html/projeto-youtube/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <div class="topo">
         <div class="icon">
             <img class="img" src="youtube/icons/menu-icon.svg" alt="icon">
             <img class="img-2" src="youtube/icons/logo.svg" alt="logo">
@@ -22,8 +22,44 @@
             </button>
         </div>
         <div class="container-02">
-            
+            <img class="icone" src="youtube/icons/upload.svg" alt="uploud">
+            <img class="icone" src="youtube/icons/apps.svg" alt="apps">
+            <img class="icone" src="youtube/icons/bell.svg" alt="bell">
         </div>
-    </nav>
+        <div class="avatar">
+
+        </div>
+    </div>
+
+    <div class="menu">
+        <nav>
+            <div class="botao-menu">
+                <div class="b1">
+                    <img src="youtube/icons/home.svg" alt="home">
+                    <p>Home</p>
+                </div>
+
+                <div class="b1">
+                    <img src="youtube/icons/shorts.svg" alt="shorts">
+                    <p>Shorts</p>
+                </div>
+
+                <div class="b1">
+                    <img src="youtube/icons/subscriptions.svg" alt="subscriptions">
+                    <p>Subscriptions</p>
+                </div>
+
+                <div class="b1">
+                    <img src="youtube/icons/library.svg" alt="library">
+                    <p>Library</p>
+                </div>
+            </div>
+            <div class="banner">
+        
+            </div>
+        </nav>
+
+
+    </div>
 </body>
 </html>
